Canonicalize battle step metadata