@@ -1,7 +1,9 @@
 package games.strategy.triplea.delegate.battle.simulation;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
+import java.util.TreeMap;
 
 public record BattleStepResult(
     BattleObservation observation,
@@ -11,6 +13,7 @@ public record BattleStepResult(
     Map<String, String> info) {
   public BattleStepResult {
     Objects.requireNonNull(observation);
-    info = Map.copyOf(info);
+    Objects.requireNonNull(info);
+    info = Collections.unmodifiableMap(new TreeMap<>(info));
   }
 }
